Now fixing the footer alignment

--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ body {
   font-style: italic;
   font-variant: small-caps;
   text-transform: none;
-  position: fixed;
-  bottom: 0px;
+  position: absolute;
+  bottom: 0;
   margin-right: auto;
   margin-left: auto;
 }
